--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,10 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta property="og:title" content="COVID-19 | Dashboard and Resources">
+    <meta property="og:description" content="List of all dashboard and data sources of COVID-19.">
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png">
+    <meta property="og:url" content="https://covid-19-coronavirus.tools/">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
