--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta property="og:title" content="COVID-19 | Dashboard and Resources">
     <meta property="og:description" content="List of all dashboard and data sources of COVID-19.">
-    <meta property="og:image" content="%PUBLIC_URL%/logo512.png">
+    <meta property="og:image" content="%PUBLIC_URL%/fb_share.jpg">
     <meta property="og:url" content="https://covid-19-coronavirus.tools/">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
