--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,11 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@BiuniGianluca" />
-    <meta name="twitter:image" content="%PUBLIC_URL%/img_share.jpg">
+    <meta name="twitter:image" content="%PUBLIC_URL%/fb_share.jpg">
     <meta property="og:title" content="COVID-19 | Dashboard and Resources" />
+    <meta property="og:type" content="website" />
     <meta property="og:description" content="List of dashboard and data about coronavirus COVID-19 (SARS-CoV-2)." />
-    <meta property="og:image" content="%PUBLIC_URL%/img_share.jpg" />
+    <meta property="og:image" content="%PUBLIC_URL%/tw_share.jpg" />
     <meta property="og:url" content="https://covid-19-coronavirus.tools/" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
